--- a/app/src/main/res/layout/home_work_2_activity.xml
+++ b/app/src/main/res/layout/home_work_2_activity.xml
@@ -1,5 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
 
-</RelativeLayout>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ScrollView01"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:ignore="ScrollViewCount,UselessParent">
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <View
+                android:layout_width="150dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="92dp"
+                android:layout_marginTop="52dp"
+                android:background="#ff0000" />
+
+        <View
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="82dp"
+            android:background="#ffffff" />
+
+        <View
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="112dp"
+            android:background="#ff0000" />
+
+        <View
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="162dp"
+            android:background="#ffffff" />
+
+        <View
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="192dp"
+            android:background="#ff0000" />
+
+        <View
+            android:layout_width="50dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="240dp"
+            android:background="#027800" />
+
+        <View
+            android:layout_width="50dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="140dp"
+            android:layout_marginTop="240dp"
+            android:background="#ffffff" />
+
+        <View
+            android:layout_width="50dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="190dp"
+            android:layout_marginTop="240dp"
+            android:background="#ff0000" />
+
+        <View
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="352dp"
+            android:background="#eada29" />
+
+        <View
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="412dp"
+            android:background="#192983" />
+
+        <View
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="442dp"
+            android:background="#ff0000" />
+
+        <View
+            android:layout_width="50dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="500dp"
+            android:background="#ffffff" />
+
+        </RelativeLayout>
+</ScrollView>
+
+
+
+
