--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,10 @@
         <item name="colorPrimaryDark">@color/defaultColo</item>
         <item name="colorAccent">@color/defaultColo</item>
     </style>
+
+    <style name="buttonsStyle">
+        <item name="android:background">#e60a18</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">11sp</item>
+    </style>
 </resources>
